<resources>
    <string name="app_name">Quiz</string>
    <string name="splash_screen_image">Splash Screen</string>
    <string name="question_1">Question 1</string>
    <string name="next">Next</string>
    <string name="option_1">option 1</string>
    <string name="option_4">option 4</string>
    <string name="option_3">option 3</string>
    <string name="option_2">option 2</string>
    <string name="Test">REsult screen</string>
    <string name="question">Question</string>
</resources>
